fix for opera mini featured image overflowing

--- a/src/styles/components/_all-posts.scss
+++ b/src/styles/components/_all-posts.scss
@@ -10,6 +10,8 @@
 .post-item__image {
     width: 100%;
     height: 240px;
+    background-position: center;
+    background-size: cover;
     
     img {
         object-fit: cover;
