--- a/src/styles/components/_blog-post.scss
+++ b/src/styles/components/_blog-post.scss
@@ -5,6 +5,8 @@
 .blog-post__header-img {
     max-width: 100vw;
     height: 400px;
+    background-position: center;
+    background-size: cover;
 
     img {
         object-fit: cover;
